--- a/src/main/resources/templates/register_form.html
+++ b/src/main/resources/templates/register_form.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration Form</title>
+    <link rel="stylesheet" th:href="@{/static/styles/main.css}">
+
 </head>
 <body>
 <h2>Registration Form</h2>
-<form action="#" th:action="@{/register/success}" method="post" th:object="${user}">
+<form class="registration-form" action="#" th:action="@{/register/success}" method="post" th:object="${user}">
     <label for="name">Full Name:</label>
     <input type="text" id="name" th:field="*{name}">
 
@@ -27,16 +29,16 @@
     <label for="married">Married?</label>
     <input type="checkbox" th:field="*{married}" id="married"><br/>
 
+    <div class="gender">
     <label>Gender:</label>
     <input type="radio" th:field="*{gender}" id="male" value="Male">
     <label for="male">Male</label>
     <input type="radio" th:field="*{gender}" id="female" value="Female">
     <label for="female">Female</label>
-    <br/>
+    </div>
 
-    <label>Note:</label>
-    <textarea rows="5" cols="25" th:field="*{note}"></textarea>
-    <br/>
+    <label for="notes">Note:</label>
+    <textarea id="notes" rows="5" cols="25" th:field="*{note}"></textarea>
 
     <button type="submit">Register</button>
 </form>
