--- a/src/main/resources/templates/register_form.html
+++ b/src/main/resources/templates/register_form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration Form</title>
-    <link rel="stylesheet" th:href="@{/static/styles/main.css}">
+    <link rel="stylesheet" type="text/css" href="../static/styles/main.css" th:href="@{/styles/main.css}">
 
 </head>
 <body>
