added margin-bottom to the inputs, removed a break and added inrow class style

--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -14,6 +14,11 @@ h1, h2 {
     margin: 1em;
 }
 
-.gender {
+.inrow {
     flex-direction: row;
+    margin-bottom: 1em;
+}
+
+input, select {
+    margin-bottom: 1em;
 }
