add style to the button

--- a/src/main/resources/templates/register_form.html
+++ b/src/main/resources/templates/register_form.html
@@ -42,7 +42,7 @@
     <label for="notes">Note:</label>
     <textarea id="notes" rows="5" cols="25" th:field="*{note}"></textarea>
 
-    <button type="submit">Register</button>
+    <button class="button" type="submit">Register</button>
 </form>
 </body>
 </html>
